@@ -76,4 +76,5 @@ public final class PreferenceConstants {
 
     public static final String AUTO_RESOLVE_ON_CLOSE = "autoResolve.close";
 
+    public static final String AUTO_RESOLVE_ON_CHANGE = "autoResolve.change";
 }
